--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -1,8 +1,8 @@
 {
-	"name": "@pds/website",
 	"private": true,
+	"name": "@pds/website",
 	"version": "0.0.0",
-	"license": "GPL-2.0",
+	"license": "MIT",
 	"scripts": {
 		"build": "nuxt build",
 		"dev": "nuxt dev",
@@ -21,6 +21,7 @@
 		"@nuxtjs/color-mode": "^3.2.0",
 		"@pds/ui": "*",
 		"@pinia/nuxt": "^0.4.6",
+		"@supabase/supabase-js": "^2.21.0",
 		"@tailwindcss/typography": "^0.5.9",
 		"@vueuse/core": "^9.11.1",
 		"autoprefixer": "^10.4.13",
