--- a/.editorconfig
+++ b/.editorconfig
@@ -1,7 +1,7 @@
 root = true
 
 [*]
-indent_style = tab
+indent_style = space
 indent_size = 2
 end_of_line = lf
 charset = utf-8
@@ -9,4 +9,4 @@ trim_trailing_whitespace = false
 insert_final_newline = false
 
 [*.py]
-tab_width = 4
+indent_size = 4
