--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,12 @@
 {
-	"semi": false,
-	"tabWidth": 2,
-	"quoteProps": "as-needed",
-	"singleQuote": false,
-	"arrowParens": "always",
-	"printWidth": 80,
-	"vueIndentScriptAndStyle": false,
-	"proseWrap": "always"
+  "semi": false,
+  "useTabs": false,
+  "tabWidth": 2,
+  "quoteProps": "as-needed",
+  "singleQuote": false,
+  "arrowParens": "always",
+  "printWidth": 80,
+  "vueIndentScriptAndStyle": false,
+  "proseWrap": "always",
+  "endOfLine": "crlf"
 }
