--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -10,26 +10,25 @@
     "preview": "nuxt preview"
   },
   "dependencies": {
-    "@vercel/analytics": "^0.1.8"
-  },
-  "devDependencies": {
-    "@fontsource/inter": "^4.5.15",
-    "@fontsource/open-sans": "^4.5.14",
-    "@iconify-prerendered/vue-fa6-brands": "^0.18.1662097805",
-    "@iconify-prerendered/vue-fa6-solid": "^0.18.1668581498",
-    "@nuxt/content": "^2.3.0",
+    "@fontsource/inter": "^5.0.3",
+    "@fontsource/open-sans": "^5.0.3",
+    "@iconify-prerendered/vue-fa6-brands": "^0.22.1680070484",
+    "@nuxt/content": "^2.7.0",
     "@nuxtjs/color-mode": "^3.2.0",
     "@pinia/nuxt": "^0.4.6",
-    "@supabase/supabase-js": "^2.21.0",
     "@tailwindcss/typography": "^0.5.9",
+    "@vercel/analytics": "^0.1.8",
     "@vueuse/core": "^9.11.1",
-    "autoprefixer": "^10.4.13",
+    "autoprefixer": "^10.4.14",
     "gsap": "^3.11.4",
-    "lucide-vue-next": "^0.166.0",
-    "nuxt": "^3.0.0",
-    "pinia": "^2.0.29",
-    "postcss": "^8.4.21",
-    "sass": "^1.57.1",
-    "tailwindcss": "^3.2.4"
+    "lucide-vue-next": "^0.244.0",
+    "nuxt": "^3.5.0",
+    "pinia": "^2.1.4",
+    "postcss": "^8.4.24",
+    "sass": "^1.63.4",
+    "tailwindcss": "^3.3.2"
+  },
+  "devDependencies": {
+    "@types/node": "^20.3.1"
   }
 }
