--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -1,34 +1,26 @@
 {
+  "name": "paco-next-rewrite",
+  "version": "0.1.0",
   "private": true,
-  "name": "@pds/website",
-  "version": "0.0.0",
-  "license": "MIT",
   "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@fontsource/inter": "^5.0.3",
-    "@fontsource/open-sans": "^5.0.3",
-    "@iconify-prerendered/vue-fa6-brands": "^0.22.1680070484",
-    "@nuxt/content": "^2.7.0",
-    "@nuxtjs/color-mode": "^3.2.0",
-    "@pinia/nuxt": "^0.4.6",
-    "@tailwindcss/typography": "^0.5.9",
-    "@vercel/analytics": "^0.1.8",
-    "@vueuse/core": "^9.11.1",
-    "autoprefixer": "^10.4.14",
-    "gsap": "^3.11.4",
-    "lucide-vue-next": "^0.244.0",
-    "nuxt": "^3.5.0",
-    "pinia": "^2.1.4",
-    "postcss": "^8.4.24",
-    "sass": "^1.63.4",
-    "tailwindcss": "^3.3.2"
-  },
-  "devDependencies": {
-    "@types/node": "^20.3.1"
+    "@types/node": "20.4.5",
+    "@types/react": "18.2.17",
+    "@types/react-dom": "18.2.7",
+    "autoprefixer": "10.4.14",
+    "eslint": "8.45.0",
+    "eslint-config-next": "13.4.12",
+    "next": "13.4.12",
+    "postcss": "8.4.27",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "sass": "^1.64.1",
+    "tailwindcss": "3.3.3",
+    "typescript": "5.1.6"
   }
 }
