--- a/.gitignore
+++ b/.gitignore
@@ -4,16 +4,12 @@ node_modules
 .turbo
 .env
 
-# Ignore any 'tl.json' files used for updaters sent to Redis
-*tl.json
-*.ipynb
-
 # python stuff
 *.idea
 venv
 __pycache__
 *test.py
-paco-cache*
+.paco-cache.json
 
 # supabase for docker
 supabase
