--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,40 @@
-# General stuff
-node_modules
-*.log*
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# local env files
+.env*.local
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
+
 .turbo
-.env
 
 # python stuff
 *.idea
 venv
 __pycache__
-*test.py
-.paco-cache.json
-
-# supabase for docker for local testing
-supabase
