--- a/package.json
+++ b/package.json
@@ -1,23 +1,43 @@
 {
-  "private": true,
-  "name": "pandapaco-drawing-stats",
-  "version": "0.0.0",
+  "name": "pacopanda-drawing-stats",
+  "version": "0.1.0",
   "license": "MIT",
-  "type": "module",
-  "workspaces": [
-    "web",
-    "utils/web/**",
-    "utils/configs/**"
-  ],
+  "private": true,
   "scripts": {
-    "dev": "turbo dev --filter=website",
-    "build": "turbo build --filter=website",
-    "prettier:check": "prettier --check .",
-    "prettier:write": "prettier --write ."
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "@mdx-js/loader": "^2.3.0",
+    "@mdx-js/react": "^2.3.0",
+    "@next/mdx": "^13.5.4",
+    "@tailwindcss/typography": "^0.5.10",
+    "@types/mdx": "^2.0.8",
+    "class-variance-authority": "^0.7.0",
+    "gray-matter": "^4.0.3",
+    "gsap": "^3.12.2",
+    "lodash-es": "^4.17.21",
+    "next": "latest",
+    "next-pwa": "^5.6.0",
+    "react": "latest",
+    "react-dom": "latest",
+    "react-icons": "^4.11.0"
   },
   "devDependencies": {
-    "prettier": "^2.8.3",
-    "turbo": "^1.8.2"
+    "@turbo/gen": "^1.10.13",
+    "@types/lodash-es": "^4.17.9",
+    "@types/node": "latest",
+    "@types/react": "latest",
+    "@types/react-dom": "latest",
+    "autoprefixer": "^10",
+    "eslint": "^8",
+    "eslint-config-next": "latest",
+    "postcss": "^8",
+    "tailwindcss": "^3",
+    "turbo": "^1.10.13",
+    "typescript": "latest"
   },
   "engines": {
     "node": ">18.0.0",
