--- a/package.json
+++ b/package.json
@@ -1,43 +1,13 @@
 {
-  "name": "pacopanda-drawing-stats",
-  "version": "0.1.0",
-  "license": "MIT",
   "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@mdx-js/loader": "^2.3.0",
-    "@mdx-js/react": "^2.3.0",
-    "@next/mdx": "^13.5.4",
-    "@tailwindcss/typography": "^0.5.10",
-    "@types/mdx": "^2.0.8",
-    "class-variance-authority": "^0.7.0",
-    "gray-matter": "^4.0.3",
-    "gsap": "^3.12.2",
-    "lodash-es": "^4.17.21",
-    "next": "latest",
-    "next-pwa": "^5.6.0",
-    "react": "latest",
-    "react-dom": "latest",
-    "react-icons": "^4.11.0"
-  },
+  "name": "pacopanda-drawing-stats",
+  "license": "MIT",
+  "workspaces": [
+    "client"
+  ],
   "devDependencies": {
-    "@turbo/gen": "^1.10.13",
-    "@types/lodash-es": "^4.17.9",
-    "@types/node": "latest",
-    "@types/react": "latest",
-    "@types/react-dom": "latest",
-    "autoprefixer": "^10",
-    "eslint": "^8",
-    "eslint-config-next": "latest",
-    "postcss": "^8",
-    "tailwindcss": "^3",
     "turbo": "^1.10.13",
-    "typescript": "latest"
+    "@turbo/gen": "^1.10.13"
   },
   "engines": {
     "node": ">18.0.0",
