add reports page for later

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@turbo/gen": "^1.10.13"
   },
   "engines": {
-    "node": ">18.0.0",
-    "npm": ">= 8.0.0"
+    "node": ">=20.0.0",
+    "npm": ">=9.0.0"
   }
 }
