--- a/turbo.json
+++ b/turbo.json
@@ -3,7 +3,7 @@
   "pipeline": {
     "build": {
       "dependsOn": ["^build"],
-      "outputs": ["dist/**", ".next/**", "!.next/cache/**"]
+      "outputs": [".svelte-kit/**", ".vercel/**"]
     },
     "deploy": {
       "dependsOn": ["lint", "build"]
