--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,19 @@
 version: "3"
 services:
   paco-api:
-    container_name: paco-api
+    container_name: Paco Drawings API
     restart: unless-stopped
-  
+    build:
+      context: .
+      dockerfile: python/Dockerfile
+    ports:
+      - "4000:4000"
+
   paco-client:
-    container_name: paco-client
+    container_name: Paco Client
     restart: unless-stopped
+    build:
+      context: .
+      dockerfile: client/Dockerfile
+    ports:
+      - "3000:3000"
