add markdown parsing shits

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,15 @@
 {
   "semi": false,
   "useTabs": false,
-  "tabWidth": 2
+  "tabWidth": 2,
+  "trailingComma": "es5",
+  "plugins": ["prettier-plugin-svelte"],
+  "overrides": [
+    {
+      "files": "*.svelte",
+      "options": {
+        "parser": "svelte"
+      }
+    }
+  ]
 }
