--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "autoprefixer": "^10.4.16",
     "eslint": "^8.28.0",
     "eslint-plugin-svelte": "^2.30.0",
+    "mdsvex": "^0.11.0",
     "postcss": "^8.4.31",
     "svelte": "^4.0.5",
     "svelte-check": "^3.4.3",
