--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,8 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "autoprefixer": "^10.4.16",
+    "clsx": "^2.0.0",
+    "dedent": "^1.5.1",
     "eslint": "^8.28.0",
     "eslint-plugin-svelte": "^2.30.0",
     "mdsvex": "^0.11.0",
@@ -35,6 +37,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "lucide-svelte": "^0.284.0",
     "svelte-fa": "^3.0.4",
+    "svelte-markdown": "^0.4.0",
     "unplugin-icons": "^0.17.0"
   }
 }
