--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     restart: unless-stopped
     build:
       context: .
-      dockerfile: python/Dockerfile
+      dockerfile: src/python/Dockerfile
     ports:
       - "4000:4000"
 
