--- a/src/client/package.json
+++ b/src/client/package.json
@@ -1,43 +1,34 @@
 {
-  "name": "pacopanda-client",
-  "version": "0.0.1",
+  "name": "nuxt-app",
+  "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "vite dev",
-    "build": "vite build",
-    "preview": "vite preview",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "eslint ."
+    "build": "nuxt build",
+    "dev": "nuxt dev",
+    "generate": "nuxt generate",
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^2.0.0",
-    "@sveltejs/kit": "^1.20.4",
+    "@fontsource/inter": "^5.0.16",
+    "@fontsource/jetbrains-mono": "^5.0.17",
+    "@fontsource/open-sans": "^5.0.18",
+    "@headlessui/vue": "^1.7.16",
+    "@nuxt/content": "^2.9.0",
+    "@nuxt/devtools": "latest",
+    "@nuxt/image": "^1.1.0",
     "@tailwindcss/typography": "^0.5.10",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
     "autoprefixer": "^10.4.16",
-    "clsx": "^2.0.0",
-    "dedent": "^1.5.1",
-    "eslint": "^8.28.0",
-    "eslint-plugin-svelte": "^2.30.0",
-    "mdsvex": "^0.11.0",
-    "postcss": "^8.4.31",
-    "svelte": "^4.0.5",
-    "svelte-check": "^3.4.3",
-    "tailwindcss": "^3.3.3",
-    "tslib": "^2.4.1",
-    "typescript": "^5.0.0",
-    "vite": "^4.4.2"
-  },
-  "type": "module",
-  "dependencies": {
-    "@fontsource/inter": "^5.0.13",
-    "@fontsource/open-sans": "^5.0.15",
-    "@fortawesome/free-brands-svg-icons": "^6.4.2",
-    "lucide-svelte": "^0.284.0",
-    "svelte-fa": "^3.0.4",
-    "svelte-markdown": "^0.4.0",
-    "unplugin-icons": "^0.17.0"
+    "class-variance-authority": "^0.7.0",
+    "gsap": "^3.12.3",
+    "nuxt": "^3.8.2",
+    "nuxt-lodash": "^2.5.3",
+    "nuxt-lucide-icons": "^1.0.3",
+    "nuxt-simple-sitemap": "^4.1.7",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.3.6",
+    "vue": "^3.3.10",
+    "vue-router": "^4.2.5"
   }
 }
