--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,18 @@
 node_modules
 .DS_Store
 *.pem
+.fleet
+.idea
 
-.svelte-kit
-build
-package
+.output
+.data
+.nuxt
+.nitro
+.cache
+dist
+
+logs
+*.log
 
 .env
 .env.*
