--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "turbo dev",
     "build": "turbo build",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "postinstall": "cd src/client && nuxt prepare"
   },
   "workspaces": [
     "src/client/**"
@@ -14,8 +15,7 @@
   "lint-staged": {
     "client/**": "yarn prettier --write .",
     "server/**/!(*cache).json": "yarn prettier --write .",
-    "*.md": "yarn prettier --write .",
-    "*.{js,ts,svelte}": "eslint"
+    "*.md": "yarn prettier --write ."
   },
   "husky": {
     "hooks": {
@@ -27,11 +27,15 @@
     "husky": "^8.0.0",
     "lint-staged": "^15.0.1",
     "prettier": "^3.0.3",
-    "prettier-plugin-svelte": "^3.0.3",
     "turbo": "latest"
   },
   "engines": {
     "node": ">=20.0.0",
     "npm": ">=10.0.0"
+  },
+  "prettier": {
+    "semi": false,
+    "useTabs": false,
+    "tabWidth": 2
   }
 }
