--- a/src/client/package.json
+++ b/src/client/package.json
@@ -14,15 +14,16 @@
     "@fontsource/inter": "^5.0.16",
     "@fontsource/jetbrains-mono": "^5.0.17",
     "@fontsource/open-sans": "^5.0.18",
-    "@headlessui/vue": "^1.7.16",
     "@nuxt/content": "^2.9.0",
     "@nuxt/devtools": "latest",
     "@nuxt/image": "^1.1.0",
     "@tailwindcss/typography": "^0.5.10",
     "autoprefixer": "^10.4.16",
     "class-variance-authority": "^0.7.0",
+    "cssnano": "^6.0.2",
     "gsap": "^3.12.3",
     "nuxt": "^3.8.2",
+    "nuxt-headlessui": "^1.1.5",
     "nuxt-lodash": "^2.5.3",
     "nuxt-lucide-icons": "^1.0.3",
     "nuxt-simple-sitemap": "^4.1.7",
