move and prettier stuff

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,7 @@
   ],
   "[python]": {
     "editor.defaultFormatter": "ms-python.autopep8"
-  }
+  },
+  "editor.formatOnSave": true,
+  "editor.formatOnPaste": true
 }
