--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "prettier": {
     "semi": false,
     "useTabs": false,
-    "tabWidth": 2
+    "tabWidth": 2,
+    "trailingComma": "none"
   }
 }
