--- a/src/python/docker-compose.yml
+++ b/src/python/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     restart: unless-stopped
     build:
       context: .
-      dockerfile: src/python/Dockerfile
+      dockerfile: Dockerfile
     ports:
       - "4000:4000"
 
