--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "turbo dev",
     "build": "turbo build",
-    "prepare": "husky install",
+    "prepare": "husky",
     "postinstall": "cd client && nuxt prepare"
   },
   "workspaces": [
@@ -26,9 +26,10 @@
   "devDependencies": {
     "@kuro-utils/prettier": "*",
     "@turbo/gen": "latest",
-    "husky": "^8.0.0",
+    "husky": "^9.0.0",
     "lint-staged": "^15.0.1",
     "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "turbo": "latest"
   },
   "engines": {
