docker stuff, update utils

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,13 +1,9 @@
 FROM python:3.11
 
 WORKDIR /
-
-COPY requirements.txt /requirements.txt
-COPY server/main.py /server.py
-COPY data/scraper.py /scraper.py
-
+COPY . .
 RUN pip install --no-cache-dir --upgrade -r requirements.txt
 
 EXPOSE 4000
 
-ENTRYPOINT ["py", "server.py", "--prod"]
+CMD ["py", "__main__.py", "--prod"]
