--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     restart: unless-stopped
     build:
       context: .
-      dockerfile: python/Dockerfile
+      dockerfile: server/Dockerfile
     ports:
       - "4000:4000"
 
@@ -14,3 +14,6 @@ services:
     ports:
       - 6379:6379
       - 8001:8001
+
+volumes:
+  paco-api:
