--- a/server/.dockerignore
+++ b/server/.dockerignore
@@ -1,18 +1,5 @@
-.git
+__tests__
+schemas
 
-node_modules
-.DS_Store
-*.pem
-
-.svelte-kit
-build
-package
-
-.env
-.env.*
-!.env.example
-
-vite.config.js.timestamp-*
-vite.config.ts.timestamp-*
-
-gen-image.py
+mypy.ini
+.pep8
