--- a/package.json
+++ b/package.json
@@ -6,25 +6,27 @@
   "scripts": {
     "dev": "turbo dev",
     "build": "turbo build",
-    "prepare": "husky",
+    "prepare": "husky || true",
     "postinstall": "cd client && nuxt prepare"
   },
   "workspaces": [
     "client",
-    "utils/configs/prettier"
+    "utils/configs/**"
   ],
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "lint-staged": {
     "client/**": "yarn prettier --write \"**/*.{json,cjs,js,ts,vue,md}\"",
     "server/**/!(*cache).json": "yarn prettier --write ."
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "echo."
-    }
-  },
   "devDependencies": {
+    "@kuro-utils/eslint-config-vue": "*",
     "@kuro-utils/prettier": "*",
     "@turbo/gen": "latest",
+    "eslint": "^8.57.0",
     "husky": "^9.0.0",
     "lint-staged": "^15.0.1",
     "prettier": "^3.0.3",
